# ai-school

./: .env.example  .gitignore  CEO.md  Cargo.toml  README.md  README_EN.md  SETUP.md  docker-compose.yml
.cargo/: config.toml
.cursor/: mcp.json
.cursor/rules/: enum-dispatch-and-rustfmt.mdc
.cursor/skills/deep-reader/: skill.json
.cursor/skills/prd/: SKILL.md
.cursor/skills/update-docs/: SKILL.md
crates/ai-school-agent/: Cargo.toml
crates/ai-school-agent/src/: builder.rs  career.rs  cognition.rs  lib.rs  personality.rs
crates/ai-school-api/: Cargo.toml
crates/ai-school-api/src/: dto.rs  error.rs  main.rs  state.rs  ws.rs
crates/ai-school-api/src/routes/: agents.rs  analysis.rs  intervention.rs  mod.rs  simulation.rs
crates/ai-school-cli/: Cargo.toml
crates/ai-school-cli/src/: main.rs
crates/ai-school-cli/src/commands/: inspect.rs  mod.rs  run.rs
crates/ai-school-core/: Cargo.toml
crates/ai-school-core/src/: config.rs  error.rs
crates/ai-school-core/src/traits/: llm.rs  memory_store.rs  mod.rs  world_state.rs
crates/ai-school-core/src/types/: agent.rs  behavior.rs  career.rs  event.rs  memory.rs  mod.rs  personality.rs  world.rs
crates/ai-school-engine/: Cargo.toml
crates/ai-school-engine/src/: broadcast.rs  consistency.rs  event_gen.rs  game_master.rs  intervention.rs  lib.rs  simulation.rs  snapshot.rs
crates/ai-school-llm/: Cargo.toml
crates/ai-school-llm/src/: lib.rs  prompt.rs  retry.rs  structured.rs
crates/ai-school-llm/src/providers/: deepseek.rs  mock.rs  mod.rs
crates/ai-school-memory/: Cargo.toml
crates/ai-school-memory/src/: consolidation.rs  development.rs  evolution.rs  lib.rs  reflection.rs  retrieval.rs
crates/ai-school-memory/src/store/: in_memory.rs  mod.rs  qdrant.rs
crates/ai-school-world/: Cargo.toml
crates/ai-school-world/src/: campus.rs  curriculum.rs  lib.rs  relationships.rs  social.rs  state.rs  time.rs
docs/adr/: 0001-system-architecture-overview.md  0002-personality-evolution-mechanism.md  0003-world-system-llm-interaction.md  0004-narrative-data-dual-view.md  0005-rust-tech-stack.md  0006-project-structure.md  README.md
docs/prd/: phase1-interaction-layer-prd.md  requirements-framework.md
docs/research/: ai-town-architecture-comparison.md  generative-agents-deep-synthesis.md  generative-agents-papers.md  personality-and-generative-agents.md  personality-system-deep-analysis.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AgentList.tsx  BottomBar.tsx  CampusMap.tsx  DetailPanel.tsx  EventToast.tsx  TopBar.tsx
frontend/src/stores/: simulation.ts
frontend/src/types/: index.ts
migrations/: 20260216000001_create_agents.sql  20260216000002_create_world_state.sql
prompts/agent/: decision.j2
prompts/consistency/: narrative_data_check.j2
prompts/game_master/: arbitrate.j2
prompts/memory/: importance_scoring.j2  reflection.j2
prompts/system/: base_personality.j2  game_master_role.j2
