[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web Framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "fs"] }

# Database — Relational
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "json",
    "chrono",
    "uuid",
    "migrate",
] }

# Database — Vector
qdrant-client = "1"

# LLM Integration
async-openai = "0.27"
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization & Validation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["uuid1", "chrono"] }
jsonschema = "0.28"

# Prompt Templates
minijinja = { version = "2", features = ["loader"] }

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
thiserror = "2"
anyhow = "1"

# Config
dotenvy = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# Rand
rand = "0.8"

# Testing
mockall = "0.13"
tokio-test = "0.4"

# Internal crates
ai-school-core = { path = "crates/ai-school-core" }
ai-school-llm = { path = "crates/ai-school-llm" }
ai-school-agent = { path = "crates/ai-school-agent" }
ai-school-world = { path = "crates/ai-school-world" }
ai-school-memory = { path = "crates/ai-school-memory" }
ai-school-engine = { path = "crates/ai-school-engine" }
ai-school-api = { path = "crates/ai-school-api" }
ai-school-cli = { path = "crates/ai-school-cli" }
