[package]
name = "ai-school-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "M1: Student Agent system — personality, career, cognition"

[dependencies]
ai-school-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
