[package]
name = "ai-school-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HTTP/WebSocket API layer for AI School frontend"

[dependencies]
ai-school-core = { workspace = true }
ai-school-agent = { workspace = true }
ai-school-engine = { workspace = true }
ai-school-llm = { workspace = true }
ai-school-memory = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
