[package]
name = "ai-school-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LLM integration layer: providers, prompt rendering, structured output"

[dependencies]
ai-school-core = { workspace = true }
async-openai = { workspace = true }
reqwest = { workspace = true }
minijinja = { workspace = true }
jsonschema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3"
